--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
               <version>1.0-SNAPSHOT</version>
               <executions>
                 <execution>
+                    <phase>package</phase>
                   <goals>
                     <goal>run</goal>
                   </goals>
