--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
               </executions>
               <configuration>
                 <apiKey>dhnc4P3a.X4ZgZLEKxUaTQ8N4riWnRHUf5TD79OZT.5</apiKey>
+                <imagingServerUrl>https://imaging-dev.castsoftware.io/</imagingServerUrl>
               </configuration>
             </plugin>
             <plugin>
